<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">BTC Map</string>
    <string name="add_location">Add location</string>
    <string name="kilometers_short">km</string>
    <string name="icon">Icon</string>
    <string name="donate">Donate</string>
    <string name="qr_code">QR code</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="btc_map_donation_address">BTC Map donation address</string>
    <string name="show_my_location">Show my location</string>
    <string name="search_here">Search here</string>
    <string name="settings">Settings</string>
    <string name="trends">Trends</string>
    <string name="up_to_date_places">Verified places</string>
    <string name="total_places">Total places</string>
    <string name="pay">Pay</string>
    <string name="you_dont_have_a_compatible_wallet">You don\'t have a compatible wallet</string>
    <string name="communities">Communities</string>
    <string name="latest_changes">Latest changes</string>
    <string name="tip">⚡ Tip</string>
    <string name="osm_copyright">© OpenStreetMap contributors</string>
    <string name="view_on_osm">View on OSM</string>
    <string name="edit_on_osm">Edit on OSM</string>
    <string name="editor_manual">Editor manual</string>
    <string name="users">Users</string>
    <string name="by_s">by %1$s</string>
    <string name="unnamed">Unnamed</string>
    <string name="unnamed_user">Unnamed user</string>
    <string name="not_verified">Not verified</string>
    <string name="show_more">Show more</string>
    <string name="verify">Verify or Report</string>
    <string name="atm">ATM</string>
    <string name="checkmark_icon">Checkmark icon</string>
    <string name="database">Database</string>
    <string name="updated_s">Updated: %1$s</string>
    <string name="database_is_empty">Database is empty</string>
    <string name="category_atm">ATM</string>
    <string name="category_atm_plural">ATMs</string>
    <string name="category_bar">Bar</string>
    <string name="category_bar_plural">Bars</string>
    <string name="category_cafe">Cafe</string>
    <string name="category_cafe_plural">Cafes</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_hotel_plural">Hotels</string>
    <string name="category_other_plural">Other</string>
    <string name="category_pub">Pub</string>
    <string name="category_pub_plural">Pubs</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_restaurant_plural">Restaurants</string>
    <string name="show_atms">Show ATMs</string>
    <string name="show_osm_attribution">Show OSM attribution</string>
    <string name="pay_onchain">Pay Onchain</string>
    <string name="pay_with_lightning">Pay with Lightning</string>
    <string name="image">Image</string>
    <string name="issues">Issues</string>
    <string name="sync_failed_s">Sync failed: %1$s</string>
    <string name="new_local_merchant_accepts_bitcoins">New local merchant accepts bitcoins</string>
    <string name="show_sync_summary">Show sync summary</string>
    <string name="show_all_new_elements">Show all new elements</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>
    <string name="unknown">unknown</string>
    <string name="companion_warning">You\'ll need a companion app (%1$s) in order to make a payment. This app doesn\'t require you to fill any personal data, to the best of our knowledge. Please let us know if it\'s not the case and we\'ll remove this place.</string>
    <string name="percentage_of_verified_places">Percentage of verified places</string>
    <string name="days_since_verified">Days since verified</string>
    <string name="new_merchant_accepts_bitcoins">New merchant accepts bitcoins</string>
    <string name="delivery">Delivery</string>
    <string name="comments_d" translatable="false">Comments (%1$d)</string>
    <string name="new_merchant_notifications" translatable="false">New merchant notifications</string>
    <plurals name="d_changes">
        <item quantity="zero">%d changes</item>
        <item quantity="one">%d change</item>
        <item quantity="two">%d changes</item>
        <item quantity="few">%d changes</item>
        <item quantity="many">%d changes</item>
        <item quantity="other">%d changes</item>
    </plurals>
    <plurals name="d_places">
        <item quantity="zero">%d places</item>
        <item quantity="one">%d place</item>
        <item quantity="two">%d places</item>
        <item quantity="few">%d places</item>
        <item quantity="many">%d places</item>
        <item quantity="other">%d places</item>
    </plurals>
    <plurals name="d_issues_found" translatable="false">
        <item quantity="zero">%d issues found</item>
        <item quantity="one">%d issue found</item>
        <item quantity="two">%d issues found</item>
        <item quantity="few">%d issues found</item>
        <item quantity="many">%d issues found</item>
        <item quantity="other">%d issues found</item>
    </plurals>
</resources>