<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/donate" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/qr"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="40dp"
                android:clickable="true"
                android:contentDescription="@string/qr_code"
                android:focusable="true"
                android:src="@drawable/donation_qr_onchain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/pay_onchain"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@android:string/copy"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <ImageView
                android:id="@+id/lnQr"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="40dp"
                android:clickable="true"
                android:contentDescription="@string/qr_code"
                android:focusable="true"
                android:src="@drawable/donation_qr_lightning" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/lnPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/pay_with_lightning"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/lnCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@android:string/copy"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>